--- a/src/scss/theme/neumorphic.scss
+++ b/src/scss/theme/neumorphic.scss
@@ -1,2 +1,2 @@
-@use "/src/scss/lib/neumorphic/vars.scss" as *;
-@forward "/src/scss/lib/neumorphic/vars.scss";
+@use "@scss/lib/neumorphic/vars.scss" as *;
+@forward "@scss/lib/neumorphic/vars.scss";
