--- a/src/scss/core/fonts.scss
+++ b/src/scss/core/fonts.scss
@@ -1,13 +1,33 @@
 @font-face {
 	font-family: Gruppo;
-	src: url('resources/fonts/Gruppo/Gruppo-Regular.ttf') format('truetype');
+	src: url('fonts/Gruppo/Gruppo-Regular.ttf') format('truetype');
 }
 @font-face {
 	font-family: KellySlab;
-	src: url('resources/fonts/KellySlab/KellySlab-Regular.ttf') format('truetype');
+	src: url('fonts/KellySlab/KellySlab-Regular.ttf') format('truetype');
 }
 @font-face {
 	font-family: Arima;
-	src: url('resources/fonts/Arima/Arima-VariableFont_wght.ttf') format('truetype');
+	src: url('fonts/Arima/Arima-VariableFont_wght.ttf') format('truetype');
 	font-weight: 100 900;
+}
+
+@font-face {
+	font-family: 'Material Symbol';
+	font-style: normal;
+	src: url( 'fonts/GoogleFonts/MaterialSymbolsSharp.ttf')  format('truetype')
+}
+
+.material-symbol {
+	font-family: 'Material Symbol';
+	font-weight: normal;
+	font-style: normal;
+	font-size: 24px;  /* Preferred icon size */
+	display: inline-block;
+	line-height: 1;
+	text-transform: none;
+	letter-spacing: normal;
+	word-wrap: normal;
+	white-space: nowrap;
+	direction: ltr;
 }
