--- a/src/scss/theme/default.scss
+++ b/src/scss/theme/default.scss
@@ -5,7 +5,7 @@
 
 $window-bg: colours.$cool-black;
 
-$col-frame: rgb(43, 44, 49);
+$col-text-light: colours.$soft-white;
 
 $col-primary: colours.$neon-green;
 $col-secondary: colours.$neon-orange;
