--- a/src/scss/lib/neumorphic/vars.scss
+++ b/src/scss/lib/neumorphic/vars.scss
@@ -1,13 +1,23 @@
 @use '@scss/theme/default.scss' as *;
 
+$neumorphic-slab-corner-radius:	15px;
+$neumorphic-slab-height:		15px;
+$neumorphic-slab-slope:			10deg;
+$neumorphic-slab-colour:		$window-bg;
+$neumorphic-slab-base-contour:	5px;
+$neumorphic-slab-lip-contour:	2px;
 
-$height:		25px;
+$neumorphic-light-yaw:			30deg;
+$neumorphic-light-strength:		15%;
+
+$neumorphic-include-shadow:		true;
+
+
 $corner-radius:	15px;
 $slope:			25deg;
 $base-curve:	8px;
 $lip-curve:		2px;
 
-$surface-colour: $window-bg;
 
 $rotate-reaction-degrees: 15deg;
 
